KFSMI-4135 : configuration updates to allow a single-property switch of KFS in running with a separate Rice server

--- a/build.properties
+++ b/build.properties
@@ -66,7 +66,7 @@ context.file=context.xml
 carol.file=carol.properties
 log4j.file=log4j.properties
 security.file=security.properties
-keystore.filename=ricekeystore
+keystore.filename=rice.keystore
 configuration.file=configuration.properties
 p6spy.file=spy.properties
 web.file=web.xml
@@ -335,39 +335,51 @@ secure.workflowdocument.javaservice.endpoint=true
 secure.workflowutility.javaservice.endpoint=true
 simpleDocumentActionsService.security=true
 
-rice.server.url=${application.url}
+rice.config.property.file=${appserver.home}/conf/rice-config.xml
+
+rice.standalone=false
+#rice.appserver.url=${appserver.url}
+#rice.server.url=${application.url}
+
+rice.datasource.username=${datasource.username}
+rice.datasource.password=${datasource.password}
+
 # the base url for the rice struts module
-rice.url=${rice.server.url}/${rice.application}
+#rice.url=${rice.server.url}/${rice.application}
+#rice.kr.url=${rice.server.url}/${rice.application}
 # the base url for rice images that can reside outside the application
-rice.externalizable.images.url=${rice.server.url}/${rice.application}/static/images/
+#rice.externalizable.images.url=${rice.url}/static/images/
 # the base url for the service bus struts module
 # the KSB UI runs locally - so keep at the base application URL
 rice.ksb.url=${application.url}/${ksb.application}
+#rice.ksb.url=${rice.server.url}/${ksb.application}
 
-rice.kim.url=${rice.server.url}/${kim.application}
+#rice.kim.url=${rice.server.url}/${kim.application}
 # the workflow deployment environment that this deployment of the application should use (can only differ from ${build.environment} if ${rice.use.standalone.workflow} is true)
 rice.workflow.build.environment=${build.environment}
 # the base url for the workflow struts module or the workflow application on the central server
-rice.workflow.url=${rice.server.url}/${workflow.application}
-rice.kew.url=${rice.server.url}/${workflow.application}
+#rice.workflow.url=${rice.server.url}/${workflow.application}
+#rice.kew.url=${rice.server.url}/${workflow.application}
 
 # Mode that KIM or KEW should run as 
 # local - used in development
 # embedded - using standalone rice server but running KIM services locally
 # remote - accessing KIM core services over the KSB (not currently supported by KFS for KEW)
-kim.mode=local 
+#kim.mode=local
 # are multiple applications at your institution using workflow, and do you therefore point to a central workflow deployment that they all use?
 # If so, this should be changed to "embedded"
 # note, many of the properties prefixed by "rice.workflow" above (and below) will not apply if this is set to true, e.g. xml polling configuration, log4j settings file, etc.
-kew.mode=local
-ksb.mode=local
+#kew.mode=local
+#ksb.mode=local
 
 # REMOVE-ME
 rice.use.standalone.workflow=false
 
 # settings for the datasource used by embedded workflow when using a standalone workflow server
-rice.server.datasource.username=${datasource.username}
-rice.server.datasource.password=${datasource.password}
+#rice.server.datasource.username=${rice.datasource.username}
+#rice.server.datasource.password=${rice.datasource.password}
+#rice.server.datasource.username=${datasource.username}
+#rice.server.datasource.password=${datasource.password}
 rice.server.datasource.pool.size=${datasource.pool.size}
 rice.server.datasource.connection.timeout=${datasource.connection.timeout}
 rice.server.datasource.validating.query=${datasource.validating.query}
@@ -461,6 +473,7 @@ authentication.filter.mappings=<filter-mapping>\
 # 3. CONFIGURATION MANAGEMENT PROPERTIES
 
 rice.name=rice
+rice.kns.name=kns
 rice.api.name=api
 rice.impl.name=impl
 rice.version=1.0.1-SNAPSHOT
@@ -468,6 +481,7 @@ rice.output.directory=target
 rice.output.directories=*/${rice.output.directory}/
 rice.output.file.prefix=${rice.name}*
 rice.output.lib.suffix=.jar
+rice.output.war.suffix=.war
 rice.output.web.suffix=-web.zip
 rice.output.licenses.suffix=-licenses.zip
 rice.output.src.suffix=-sources.jar
@@ -477,6 +491,7 @@ rice.output.classes.directories=${rice.output.directories}classes/**/**
 dependencies.project.directory=${projects.directory}/${ant.project.name}-dependencies
 rice.project.directory=${projects.directory}/${rice.name}
 rice.web.directory=${rice.project.directory}/web/src/main/webapp
+
 
 # for development efficience, this property will deploy rice cas locally
 #deploy.local.cas.server=true
