--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,9 @@
 		<property name="appenders" value="INFO, LogFile" />
 		<condition property="use.quartz.jdbc.jobstore" value="false"><equals arg1="${is.local.build}" arg2="true" /></condition>
 		<property name="use.quartz.jdbc.jobstore" value="true" />
+		<condition property="rice.create.standalone" value="true">
+			<equals arg1="${rice.standalone}" arg2="true" />
+		</condition>
 		<condition property="b2b.environment" value="${b2b.production.environment}">
 			<equals arg1="${build.environment}" arg2="${production.environment.code}" />
 		</condition>
@@ -88,12 +91,35 @@
 		</condition>
 		<property name="b2b.punch.out.url" value="${b2b.test.punch.out.url}" />
 
+        <property name="rice.datasource.url" value="${datasource.url}" /> 
 		<condition property="rice.server.datasource.platform" value="${mysql.server.datasource.platform}"><equals arg1="${datasource.ojb.platform}" arg2="${mysql.ojb.platform}" /></condition>
 		<property name="rice.server.datasource.platform" value="${oracle.server.datasource.platform}" />
-		<property name="rice.server.datasource.url" value="${datasource.url}" />
+		<condition property="rice.server.datasource.url" value="${rice.datasource.url}" else="${datasource.url}"><isset property="rice.create.standalone"/></condition>
 		<property name="rice.server.datasource.driver.class" value="${datasource.driver.class}" />
+		<condition property="rice.server.datasource.username" value="${rice.datasource.username}" else="${datasource.username}"><isset property="rice.create.standalone"/></condition>
+		<condition property="rice.server.datasource.password" value="${rice.datasource.password}" else="${datasource.password}"><isset property="rice.create.standalone"/></condition>
+
+		<condition property="rice.dev.mode" value="false"><equals arg1="${rice.standalone}" arg2="true" /></condition>
 		<condition property="rice.dev.mode" value="true"><equals arg1="${is.local.build}" arg2="true" /></condition>
 		<property name="rice.dev.mode" value="false" />
+		
+		<condition property="kim.mode" value="embedded" else="local"><isset property="rice.create.standalone" /></condition>
+		<condition property="kew.mode" value="embedded" else="local"><isset property="rice.create.standalone" /></condition>
+		<condition property="ksb.mode" value="embedded" else="local"><isset property="rice.create.standalone" /></condition>
+	    <!-- set the rice server URL to the same as KFS or it's own context, depending on the rice.standalone property -->
+	    <property name="rice.appserver.url" value="${appserver.url}"/>
+		<condition property="rice.server.url" value="${rice.appserver.url}/kr-${build.environment}">
+		    <equals arg1="${rice.standalone}" arg2="true" />
+		</condition>
+        <property name="rice.server.url" value="${application.url}"/>
+	    
+        <property name="rice.url" value="${rice.server.url}/${rice.application}"/>
+        <property name="rice.kr.url" value="${rice.url}"/>
+        <property name="rice.kim.url" value="${rice.server.url}/${kim.application}"/>
+        <property name="rice.kew.url" value="${rice.server.url}/${workflow.application}"/>
+        <property name="rice.workflow.url" value="${rice.kew.url}"/>
+        <property name="rice.externalizable.images.url" value="${rice.url}/static/images/"/>
+	    
 		<condition property="rice.message.persistence" value="false"><equals arg1="${is.local.build}" arg2="true" /></condition>
 		<property name="rice.message.persistence" value="true" />
 		<condition property="rice.use.quartz.database" value="true">
@@ -120,6 +146,7 @@
 		
 		<loadfile property="cas.context" srcfile="${build.appserver.directory}/${cas.context.file}"><filterchain><expandproperties/></filterchain></loadfile>
 		<loadfile property="standalone-workflow" srcfile="${build.appserver.directory}/standalone-workflow.xml"><filterchain><expandproperties/></filterchain></loadfile>
+		<loadfile property="standalone-rice" srcfile="${build.appserver.directory}/standalone-rice-config.xml"><filterchain><expandproperties/></filterchain></loadfile>
 	</target>
 
 	<target name="init-make-references" depends="init-properties">
@@ -235,10 +262,30 @@
 		<unzip dest="${help.directory}" src="${build.project.directory}/help.zip" />
 	</target>
 
-	<target name="filter-project-rice" unless="dont.filter.project.rice" depends="init-properties">
-		<unzip dest="${webroot.directory}" src="${build.project.directory}/${rice.name}-${rice.version}${rice.output.web.suffix}" />
+	<target name="filter-project-rice" unless="dont.filter.project.rice" depends="init-properties, filter-project-rice-unzip-web, filter-project-rice-publish-war">
 		<unzip dest="${distribution.licenses.directory}/${rice.name}" src="${build.project.directory}/${rice.name}-${rice.version}${rice.output.licenses.suffix}" />
 	</target>
+	
+	<target name="filter-project-rice-unzip-web">
+		<echo message="Unzipping Rice web files to: ${webroot.directory}" />
+		<unzip dest="${webroot.directory}" src="${build.project.directory}/${rice.name}-${rice.version}${rice.output.web.suffix}" />
+	</target>	
+		
+	<target name="filter-project-rice-publish-war">
+	    <!-- clean out any previous rice server files -->
+        <delete file="${appserver.deploy.dir}/${rice.application}-${build.environment}.war" failonerror="false" verbose="true" />
+        <delete dir="${appserver.deploy.dir}/${rice.application}-${build.environment}" failonerror="false"/>
+        <delete file="${rice.config.property.file}" failonerror="false" verbose="true" />
+	    <if>
+	        <isset property="rice.create.standalone" />
+	        <then>
+	            <echo message="Copying ${build.project.directory}/${rice.name}-web-${rice.version}${rice.output.war.suffix} to: ${appserver.deploy.dir}/${rice.application}-${build.environment}.war" />
+	            <copy file="${build.project.directory}/${rice.name}-web-${rice.version}${rice.output.war.suffix}" tofile="${appserver.deploy.dir}/${rice.application}-${build.environment}.war"/>
+	            <echo>yo: ${rice.config.property.file}</echo>
+	            <echo file="${rice.config.property.file}" message="${standalone-rice}"  />
+	        </then>
+	    </if>
+	</target>		
 	
   	<target name="filter-project-spring-ide" unless="dont.filter.project.spring.ide" depends="init-properties">
 		<delete dir="${rice.datadictionary.directory}" failonerror="false" quiet="true"/>
@@ -386,7 +433,7 @@
 		<zip destfile="${deploy.working.directory}/security.zip" basedir="${basedir}" includes="${security.file}" />
 		<zip destfile="${deploy.working.directory}/skel.zip" basedir="${build.work.directory}" />
 	</target>
-
+	
 	<target name="dist" depends="make-source">
 		<copy todir="${war.directory}">
 			<fileset dir="${webroot.directory}" excludes="WEB-INF/classes/**/**" />
