--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1195,6 +1195,7 @@ error.labor.invalidSalaryObjectCode=Invalid Salary Object Code.
 error.labor.accountingLineTotalsMismatch=Source accounting lines total amount must match the target accounting lines total amount.
 error.labor.accountingLineTotalsByPayFYPayPeriodMismatch=Source accounting lines total amount must match the target accounting lines total amount by Pay Fiscal Year and Pay Period.
 error.labor.alreadyPendingSalaryTransferError=Employee {0} has a pending entry for period code {1}, account number {2}, and object code {3} that is not processed yet.
+error.labor.alreadyPendingBenefitTransferError=There is a pending entry for account number {0}, object code {1}, period code, {2} and fiscal year {3} that is not processed yet.
 error.labor.missingEmployeeIdError=Employee ID is required.
 error.labor.invalidFringeObjectCode=Invalid Fringe Object Code. 
 error.labor.distinctObjectCodeError=Transfers cannot be made between different fringe benefit object codes.
