KFSMI-4804 - Error when modifying Fiscal Officer role due to delegation rules KFSMI-2469 - eliminate manual distribution steps

--- a/build.properties
+++ b/build.properties
@@ -563,3 +563,6 @@ report.writer.service.new.line.characters=\\n
 email.reminder.lifecycle.enabled=false
 mail.smtp.host=${mail.relay.server}
 mail.transport.protocol=smtp
+
+feedback.link.url=https://test.kuali.org/jira/secure/CreateIssue.jspa?pid=10091&amp;issuetype=1
+licensing.contact.email=license@kuali.org
