--- a/build.properties
+++ b/build.properties
@@ -68,6 +68,11 @@ log4j.file=log4j.properties
 security.file=security.properties
 keystore.filename=rice.keystore
 configuration.file=configuration.properties
+# Set the property below to add additional properties to the 
+# configuration.properties file that is deployed with the application.
+# It will be tokenized using the same properties available to 
+# build/project/configuration.properties.
+institutional.configuration.file=
 p6spy.file=spy.properties
 web.file=web.xml
 log4j.library.file=log4j-1.2.14.jar
