--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1888,6 +1888,7 @@ error.document.customerInvoiceWriteoff.batchSent=Invoice Writeoff group successf
 error.document.customerInvoiceWriteoff.emptyCustomerNote=Note is required.
 error.document.customerInvoiceWriteoff.invalidCustomerNote=Note must be at least 5 character long.
 error.document.customerInvoiceWriteoff.onlyOneWriteoffInRoutePerInvoice=The invoice has a customer invoice writeoff document in route.
+error.document.customerInvoiceWriteoff.invoiceNotFinal=The invoice is not final.
 
 # Accounts Receivable: Payment Application Document 
 error.document.paymentApplication.amountToBeAppliedCannotBeZero=Amount to apply must be greater than zero. 
