KFSMI-4683: non travel validation should more closely follow FIS logic (some incomplete work from KFSMI-4682 thrown in as well for the sake of the commit)

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -441,6 +441,8 @@ error.dv.checkTotalChange=Amount cannot be increased, only decreased.
 error.dv.vendorNamePersonNameConfusion = {0} cannot be used when {1} or {2} has been entered.
 error.dv.vendorEmployeeConfusion = {0} cannot be used when {1} or {2} has been entered.
 
+error.dv.campusTurnedOffSpecialHandlingWithoutExplanatoryNote=Another note is required if the Disbursement Manager turns off special handling.
+
 warning.dv.paymentReason.mutilpeValidPayeeTypes = {1} are the only valid Payee Types for Payment Reason {0}.
 warning.dv.paymentReason.singleValidPayeeType = {1} is the only valid Payee Type for Payment Reason {0}.
 warning.dv.paymentReason.research = Note: For Payment reason {0}, {1} are the only valid Payee Types for payments less than ${3}; {2} is the only valid payee type for payments of ${3} or more.
